Cleaned the package.json a bit.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "class-merge",
   "version": "0.1.0",
-  "description": "A simple tool for merging classes.",
+  "description": "A simple tool for merging classes",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
@@ -14,9 +14,6 @@
   },
   "directories": {
     "test": "test"
-  },
-  "dependencies": {
-    "chai": "^1.10.0"
   },
   "repository": {
     "type": "git",
